be/feat: add endpoitn POST/supplier
